tests/parsing/property_assigned_twice/stderr.golden
error: reassignment to 'width' property
bus.fbd +3:3
   |
 3 |   width = 2
   |   ^^^^^
